add new list page scrollpage - html and css, images

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <ul class="secondBar">
            <li><span>CATEGORIES</span> 
            <br>
-               <br><a class="downLink" href="">CROOMING</a>
+               <br><a class="downLink" href="scrollpage.html">CROOMING</a>
                <br><a class="downLink" href="">DAYCARE</a>
                <br><a class="downLink" href="">PETSHOWS</a>
                <br><a class="downLink" href="">TRAINING YOUR PET</a>
