added second list page scrollpage2.html,changed images

--- a/scrollpage2.html
+++ b/scrollpage2.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    
+
 <!--HEADER-->
     <div class="header">
         <div class="hight">
@@ -19,6 +19,7 @@
 
     </div>
 
+<!--MAIN-->
 <div class="menu">
     <ul class="menuUp">
         <li class="Up">
@@ -30,11 +31,10 @@
     </ul>
 </div>
 
-<!--MAIN-->
 <!-- one box in container-->    
    <div class="container">
        <div class="box1">
-           <img src="images/01.jpg"
+           <img src="images/07.jpg"
             alt="dog" height="398px" width="98.5%">
            <div id="text1">
                <p>DOG LIABILITY INSURANCE</p>
@@ -45,7 +45,7 @@
 
 <div class="container">
        <div class="box1">
-           <img src="images/02.jpg"
+           <img src="images/08.jpg"
             alt="dog" height="398px" width="98.5%">
            <div id="text1">
                <p>DOG LIABILITY INSURANCE</p>
@@ -56,40 +56,7 @@
 
 <div class="container">
        <div class="box1">
-           <img src="images/03.jpg"
-            alt="dog" height="398px" width="98.5%">
-           <div id="text1">
-               <p>DOG LIABILITY INSURANCE</p>
-               <a class="big" href="page1.html"></a>
-           </div>
-       </div>
-   </div>
-
-<div class="container">
-       <div class="box1">
-           <img src="images/04.jpg"
-            alt="dog" height="398px" width="98.5%">
-           <div id="text1">
-               <p>DOG LIABILITY INSURANCE</p>
-               <a class="big" href="page1.html"></a>
-           </div>
-       </div>
-   </div>
-
-<div class="container">
-       <div class="box1">
-           <img src="images/05.jpg"
-            alt="dog" height="398px" width="98.5%">
-           <div id="text1">
-               <p>DOG LIABILITY INSURANCE</p>
-               <a class="big" href="page1.html"></a>
-           </div>
-       </div>
-   </div>
-
-<div class="container">
-       <div class="box1">
-           <img src="images/06.jpg"
+           <img src="images/09.jpg"
             alt="dog" height="398px" width="98.5%">
            <div id="text1">
                <p>DOG LIABILITY INSURANCE</p>
@@ -102,7 +69,7 @@
    <div class="container2">
        <ul class="NumPage">
            <li>
-               <a class="num" href="scrollpage2.html">1</a>
+               <a class="num" href="scrollpage.html">1</a>
            </li>
            <li>
                <a class="num" href="scrollpage2.html">2</a>               
@@ -110,7 +77,7 @@
        </ul>
    </div>
 
-   <!--FOOTER-->
+   <!--FOOTER -->
    <div class="footer">
        <ul class="mainBar">
            <li><span>A BIT ABOUT THIS BLOG AND WHAT 
