--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<!--header-->
+<!--HEADER-->
     <div class="header">
         <div class="hight">
             
@@ -18,6 +18,7 @@
 
     </div>
 
+<!--MAIN-->
 <!-- one box in container-->    
    <div class="container">
        <div class="box1">
@@ -102,10 +103,10 @@
                    <p>DOGS USING NEWLY DEVELOPED WEARABLE TECHNOLOGY</p>
                    <a class="small" href="page9.html"> </a>
                </div>
-           </div>                              
-       
+           </div>                                
    </div>   
-<!--footer -->
+
+<!--FOOTER -->
    <div class="footer">
        <ul class="mainBar">
            <li><span>A BIT ABOUT THIS BLOG AND WHAT 
