added social links at footer, images of links

--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 <body>
 <!--HEADER-->
     <div class="header">
-        <div class="hight">
-            
-        </div>
-        <div class="bottom">
+        <div class="height">
             <p id="Htext">ALL ABOUT DOGS</p>
         </div>
-
+        <div class="bottom">
+            <ul class="social">
+                <li class="sociall"><a href=""><img class="links" src="images/goo1.png"></a></li>
+                <li class="sociall"><a href=""><img class="links" src="images/link1.png"></a></li>
+                <li class="sociall"><a href=""><img class="links" src="images/rss1.png"></a></li>
+                <li class="sociall"><a href=""><img class="links" src="images/twit1.png"></a></li>                
+                <li class="sociall"><a href=""><img class="links" src="images/face1.png"></a></li>                
+            </ul>
+        </div>
     </div>
 
 <!--MAIN-->
@@ -109,7 +114,7 @@
 <!--FOOTER -->
    <div class="footer">
        <ul class="mainBar">
-           <li><span>A BIT ABOUT THIS BLOG AND WHAT 
+           <li class="second"><span>A BIT ABOUT THIS BLOG AND WHAT 
                  <br>WE LIKE TO WRITE ABOUT.</span> <br><br>    
                  
                <p>We are committed to making a profound difference in the lives of
@@ -121,7 +126,7 @@
         </ul>
 
         <ul class="secondBar">
-           <li><span>CATEGORIES</span> 
+           <li class="second"><span>CATEGORIES</span> 
            <br>
                <br><a class="downLink" href="scrollpage.html">CROOMING</a>
                <br><a class="downLink" href="">DAYCARE</a>
@@ -130,7 +135,7 @@
                <br><a class="downLink" href="">PET'S DISEASES</a>
                <br><a class="downLink" href="">ANIMAL WELLBEING</a>               
            </li>
-           <li><span>RECENT POINTS</span>
+           <li class="second"><span>RECENT POINTS</span>
            <br>
                <br><a class="downLink" href="">THE BIGGEST PET SHOW</a>               
                <br><a class="downLink" href="">DONATION PROGRAM</a>
