--- a/scrollpage2.html
+++ b/scrollpage2.html
@@ -10,23 +10,22 @@
 
 <!--HEADER-->
     <div class="header">
-        <div class="hight">
-            
-        </div>
-        <div class="bottom">
+        <div class="height">
             <p id="Htext">ALL ABOUT DOGS</p>
         </div>
-
+        <div class="bottom">
+            
+        </div>
     </div>
 
 <!--MAIN-->
 <div class="menu">
     <ul class="menuUp">
         <li class="Up">
-            <a href="index.html">Home</a>
+            <a class="menuLink" href="index.html">Home</a>
         </li>
         <li class="Up">
-            <a href="">Blog</a>
+            <a class="menuLink" href="">Blog</a>
         </li>
     </ul>
 </div>
